--- a/Projects/Lazarus/WebSocketServerGui/unitmain.lfm
+++ b/Projects/Lazarus/WebSocketServerGui/unitmain.lfm
@@ -16,10 +16,13 @@ object Form1: TForm1
     Width = 770
     Panels = <    
       item
-        Width = 300
+        Width = 250
       end    
       item
-        Width = 50
+        Width = 250
+      end    
+      item
+        Width = 250
       end>
     SimplePanel = False
   end
@@ -85,8 +88,8 @@ object Form1: TForm1
     end
     object Memo1: TMemo
       Left = 1
-      Height = 186
-      Top = 52
+      Height = 134
+      Top = 104
       Width = 768
       Align = alBottom
       TabOrder = 2
@@ -109,14 +112,39 @@ object Form1: TForm1
       OnClick = Button4Click
       TabOrder = 4
     end
+    object Button5: TButton
+      Left = 24
+      Height = 25
+      Top = 48
+      Width = 171
+      Caption = 'mDNS Connect'
+      OnClick = Button5Click
+      TabOrder = 5
+    end
+    object Button6: TButton
+      Left = 216
+      Height = 25
+      Top = 48
+      Width = 171
+      Caption = 'mDNS Disconnnect'
+      OnClick = Button6Click
+      TabOrder = 6
+    end
   end
   object LccWebSocketServer1: TLccWebSocketServer
     Hub = False
     Gridconnect = True
     OnConnectionStateChange = LccWebSocketServer1ConnectionStateChange
+    OnErrorMessage = LccWebSocketServer1ErrorMessage
     OnReceiveMessage = LccWebSocketServer1ReceiveMessage
     SleepCount = 0
     left = 152
+    top = 72
+  end
+  object Lcc_mDNS_SinglShotServer1: TLcc_mDNS_SinglShotServer
+    OnConnectionStateChange = Lcc_mDNS_SinglShotServer1ConnectionStateChange
+    OnErrorMessage = Lcc_mDNS_SinglShotServer1ErrorMessage
+    left = 200
     top = 72
   end
 end
