--- a/Projects/Lazarus/WebSocketServerGui/unitmain.lfm
+++ b/Projects/Lazarus/WebSocketServerGui/unitmain.lfm
@@ -1,10 +1,10 @@
 object Form1: TForm1
-  Left = 332
-  Height = 412
-  Top = 155
+  Left = 312
+  Height = 449
+  Top = 223
   Width = 770
   Caption = 'Form1'
-  ClientHeight = 412
+  ClientHeight = 449
   ClientWidth = 770
   OnCreate = FormCreate
   OnDestroy = FormDestroy
@@ -12,7 +12,7 @@ object Form1: TForm1
   object StatusBar1: TStatusBar
     Left = 0
     Height = 15
-    Top = 397
+    Top = 434
     Width = 770
     Panels = <    
       item
@@ -29,7 +29,7 @@ object Form1: TForm1
   object ListView1: TListView
     Left = 0
     Height = 150
-    Top = 247
+    Top = 284
     Width = 770
     Align = alBottom
     AutoWidthLastColumn = True
@@ -54,18 +54,18 @@ object Form1: TForm1
     Cursor = crVSplit
     Left = 0
     Height = 8
-    Top = 239
+    Top = 276
     Width = 770
     Align = alBottom
     ResizeAnchor = akBottom
   end
   object Panel1: TPanel
     Left = 0
-    Height = 239
+    Height = 276
     Top = 0
     Width = 770
     Align = alClient
-    ClientHeight = 239
+    ClientHeight = 276
     ClientWidth = 770
     TabOrder = 3
     object Button2: TButton
@@ -89,7 +89,7 @@ object Form1: TForm1
     object Memo1: TMemo
       Left = 1
       Height = 134
-      Top = 104
+      Top = 141
       Width = 768
       Align = alBottom
       TabOrder = 2
@@ -138,13 +138,14 @@ object Form1: TForm1
     OnErrorMessage = LccWebSocketServer1ErrorMessage
     OnReceiveMessage = LccWebSocketServer1ReceiveMessage
     SleepCount = 0
-    left = 152
-    top = 72
+    left = 136
+    top = 88
   end
   object Lcc_mDNS_SinglShotServer1: TLcc_mDNS_SinglShotServer
     OnConnectionStateChange = Lcc_mDNS_SinglShotServer1ConnectionStateChange
     OnErrorMessage = Lcc_mDNS_SinglShotServer1ErrorMessage
-    left = 200
+    OnQuestion = Lcc_mDNS_SinglShotServer1Question
+    left = 328
     top = 72
   end
 end
