--- a/Projects/Lazarus/TcpTester/Forms/form_settings.lfm
+++ b/Projects/Lazarus/TcpTester/Forms/form_settings.lfm
@@ -1,38 +1,45 @@
 object FormSettings: TFormSettings
-  Left = 470
-  Height = 370
-  Top = 215
-  Width = 584
+  Left = 426
+  Height = 638
+  Top = 102
+  Width = 606
   Caption = 'FormSettings'
-  ClientHeight = 370
-  ClientWidth = 584
-  LCLVersion = '1.4.0.4'
+  ClientHeight = 638
+  ClientWidth = 606
+  LCLVersion = '2.0.2.0'
   inline FrameLccSettings: TFrameLccSettings
-    Height = 370
-    Width = 584
+    Height = 638
+    Width = 606
     Align = alClient
-    ClientHeight = 370
-    ClientWidth = 584
+    ClientHeight = 638
+    ClientWidth = 606
     inherited ButtonOk: TButton
-      Left = 429
+      OnClick = nil
     end
     inherited ButtonCancel: TButton
-      Left = 283
+      Left = 305
     end
     inherited GroupBoxComPort: TGroupBox
-      Width = 559
-      ClientHeight = 43
-      ClientWidth = 551
+      Width = 581
+      ClientWidth = 573
     end
     inherited GroupBoxEthernetClient: TGroupBox
-      Width = 559
-      ClientHeight = 122
-      ClientWidth = 551
+      Width = 581
+      ClientWidth = 573
+      inherited CheckBoxAutoResolveLocalAddressClient: TCheckBox
+        Width = 152
+      end
     end
     inherited GroupBoxEthernetServer: TGroupBox
-      Width = 559
-      ClientHeight = 58
-      ClientWidth = 551
+      Width = 581
+      ClientWidth = 573
+      inherited CheckBoxAutoResolveLocalAddressServer: TCheckBox
+        Width = 152
+      end
+    end
+    inherited GroupBoxPiSpiPort: TGroupBox
+      Width = 599
+      ClientWidth = 591
     end
   end
 end
