Not so much working with SMS but fixing bugs.

--- a/Projects/Lazarus/RR-Circuits_Mulit_Node/form_template.lfm
+++ b/Projects/Lazarus/RR-Circuits_Mulit_Node/form_template.lfm
@@ -4,12 +4,12 @@ object FormTemplate: TFormTemplate
   Top = 185
   Width = 718
   Caption = 'LCC Template Application'
-  ClientHeight = 446
+  ClientHeight = 426
   ClientWidth = 718
   Menu = MainMenu
   OnCloseQuery = FormCloseQuery
   OnShow = FormShow
-  LCLVersion = '1.6.0.4'
+  LCLVersion = '2.0.2.0'
   object ToolBarMain: TToolBar
     Left = 0
     Height = 46
@@ -17,6 +17,7 @@ object FormTemplate: TFormTemplate
     Width = 718
     AutoSize = True
     ButtonHeight = 44
+    ButtonWidth = 23
     Caption = 'ToolBarMain'
     Images = ImageListToolbar
     ShowCaptions = True
@@ -27,38 +28,37 @@ object FormTemplate: TFormTemplate
       Action = ActionComPortConnect
     end
     object ToolButtonEthernetClient: TToolButton
-      Left = 63
+      Left = 50
       Top = 2
       Action = ActionEthenetClientConnect
     end
     object ToolButtonEthernetServer: TToolButton
-      Left = 165
+      Left = 130
       Top = 2
       Action = ActionEthernetServerConnect
     end
     object ToolButtonSeparator: TToolButton
-      Left = 269
+      Left = 215
       Height = 44
       Top = 2
-      Width = 20
       Caption = 'ToolButtonSpace'
       Style = tbsSeparator
     end
     object ToolButtonMsgTrace: TToolButton
-      Left = 361
+      Left = 278
       Top = 2
       Action = ActionMsgTrace
     end
     object ToolButtonLccLogIn: TToolButton
-      Left = 289
+      Left = 223
       Top = 2
       Action = ActionLccLogin
     end
   end
   object StatusBarMain: TStatusBar
     Left = 0
-    Height = 15
-    Top = 431
+    Height = 23
+    Top = 403
     Width = 718
     Panels = <    
       item
@@ -73,16 +73,16 @@ object FormTemplate: TFormTemplate
   end
   object PanelAppSpace: TPanel
     Left = 0
-    Height = 242
+    Height = 214
     Top = 46
     Width = 718
     Align = alClient
-    ClientHeight = 242
+    ClientHeight = 214
     ClientWidth = 718
     TabOrder = 2
     object SpinEditVNodes: TSpinEdit
       Left = 31
-      Height = 16
+      Height = 21
       Top = 40
       Width = 146
       MaxValue = 2147483647
@@ -91,9 +91,9 @@ object FormTemplate: TFormTemplate
     end
     object Label1: TLabel
       Left = 31
-      Height = 16
+      Height = 13
       Top = 18
-      Width = 219
+      Width = 165
       Caption = 'Number of Virtual Nodes to Create'
       ParentColor = False
     end
@@ -120,7 +120,7 @@ object FormTemplate: TFormTemplate
     Cursor = crVSplit
     Left = 0
     Height = 5
-    Top = 288
+    Top = 260
     Width = 718
     Align = alBottom
     ResizeAnchor = akBottom
@@ -128,7 +128,7 @@ object FormTemplate: TFormTemplate
   object PanelAddOns: TPanel
     Left = 0
     Height = 138
-    Top = 293
+    Top = 265
     Width = 718
     Align = alBottom
     ClientHeight = 138
@@ -136,7 +136,7 @@ object FormTemplate: TFormTemplate
     TabOrder = 4
     object LabelServerConnections: TLabel
       Left = 9
-      Height = 16
+      Height = 13
       Top = 1
       Width = 700
       Align = alTop
@@ -147,8 +147,8 @@ object FormTemplate: TFormTemplate
     end
     object ListViewServerConnections: TListView
       Left = 1
-      Height = 120
-      Top = 17
+      Height = 123
+      Top = 14
       Width = 716
       Align = alClient
       Columns = <      
@@ -32252,17 +32252,6 @@ object FormTemplate: TFormTemplate
     left = 280
     top = 144
   end
-  object LccEthernetClient: TLccEthernetClient
-    Hub = False
-    Gridconnect = True
-    LccSettings = LccSettings
-    NodeManager = LccNodeManager
-    OnConnectionStateChange = LccEthernetClientConnectionStateChange
-    OnErrorMessage = LccEthernetClientErrorMessage
-    SleepCount = 0
-    left = 280
-    top = 200
-  end
   object LccNodeManager: TLccNodeManager
     AutoInterrogateDiscoveredNodes = False
     AutoSendVerifyNodesOnStart = False
@@ -32329,5 +32318,15 @@ object FormTemplate: TFormTemplate
     object MenuItemHelp: TMenuItem
       Caption = 'Help'
     end
+  end
+  object LccEthernetClient: TLccEthernetClient
+    Gridconnect = False
+    LccSettings = LccSettings
+    NodeManager = LccNodeManager
+    OnConnectionStateChange = LccEthernetClientConnectionStateChange
+    OnErrorMessage = LccEthernetClientErrorMessage
+    SleepCount = 0
+    left = 281
+    top = 193
   end
 end
