--- a/Projects/Lazarus/BasicCANandEthernetApp/unit1.lfm
+++ b/Projects/Lazarus/BasicCANandEthernetApp/unit1.lfm
@@ -8,13 +8,14 @@ object Form1: TForm1
   ClientWidth = 748
   OnCloseQuery = FormCloseQuery
   OnShow = FormShow
-  LCLVersion = '1.4.0.4'
+  LCLVersion = '2.0.2.0'
   object ToolBar1: TToolBar
     Left = 0
     Height = 48
     Top = 0
     Width = 748
     ButtonHeight = 44
+    ButtonWidth = 23
     Caption = 'ToolBar1'
     Images = ImageList1
     ShowCaptions = True
@@ -25,42 +26,65 @@ object Form1: TForm1
       Action = ActionSettings
     end
     object ToolButton2: TToolButton
-      Left = 72
+      Left = 60
       Height = 44
       Top = 2
-      Width = 58
       Caption = 'ToolButton2'
       Style = tbsSeparator
     end
     object ToolButton3: TToolButton
-      Left = 234
+      Left = 153
       Top = 2
       Action = ActionComPort
     end
     object ToolButton4: TToolButton
-      Left = 296
+      Left = 202
       Top = 2
       Action = ActionLogin
     end
     object ToolButton5: TToolButton
-      Left = 130
+      Left = 68
       Top = 2
       Action = ActionEthernetServer
     end
   end
   inline FrameLccLogging1: TFrameLccLogging
-    Height = 323
+    Height = 315
     Top = 48
     Width = 748
     Align = alClient
-    ClientHeight = 323
+    ClientHeight = 315
     ClientWidth = 748
     TabOrder = 1
+    inherited SpeedButtonPause: TSpeedButton
+      Top = 256
+      Flat = False
+    end
+    inherited SpeedButtonClear: TSpeedButton
+      Top = 256
+      Flat = False
+    end
+    inherited CheckBoxDetailedLogging: TCheckBox
+      Left = 43
+      Height = 17
+      Top = 261
+      Width = 97
+    end
+    inherited CheckBoxJMRIFormat: TCheckBox
+      Left = 205
+      Height = 17
+      Top = 261
+      Width = 79
+    end
+    inherited SynEdit: TSynEdit
+      Height = 246
+      Width = 748
+    end
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 15
-    Top = 371
+    Height = 23
+    Top = 363
     Width = 748
     Panels = <    
       item
@@ -79,21 +103,28 @@ object Form1: TForm1
     ComPort.Port = 'COM1'
     ComPort.StopBits = cpsb_1_StopBit
     ComPort.FlowControl = cpf_None
+    Ethernet.AutoResolveListenerIP = False
+    Ethernet.AutoResolveClientIP = False
+    Ethernet.GridConnect = False
     Ethernet.LocalClientIP = '127.0.0.1'
     Ethernet.RemoteListenerIP = '127.0.0.1'
     Ethernet.LocalListenerIP = '127.0.0.1'
     Ethernet.LocalClientPort = 12022
     Ethernet.RemoteListenerPort = 12021
     Ethernet.LocalListenerPort = 12021
+    Ethernet.Tcp = False
     General.AliasID = '0x000'
     General.NodeID = '0x000000000000'
     Logging.Detailed = False
     Logging.Enabled = False
     Logging.JMRIFormat = False
+    PiSpiPort.Speed = pss_3_9Mhz
+    PiSpiPort.Mode = psm_ClkIdleLo_DataFalling
+    PiSpiPort.Bits = psb_8
     Throttle.AutoLoadFDI = True
     Throttle.AutoScrollDelta = 2
-    left = 86
-    top = 40
+    left = 96
+    top = 64
   end
   object LccComPort1: TLccComPort
     Hub = False
