--- a/Projects/Lazarus/RR-Circuits_UsbCan_Tester/form_template.lfm
+++ b/Projects/Lazarus/RR-Circuits_UsbCan_Tester/form_template.lfm
@@ -4,13 +4,13 @@ object FormTemplate: TFormTemplate
   Top = 212
   Width = 821
   Caption = 'RR CirKits'
-  ClientHeight = 578
+  ClientHeight = 558
   ClientWidth = 821
   Menu = MainMenu
   OnCloseQuery = FormCloseQuery
   OnResize = FormResize
   OnShow = FormShow
-  LCLVersion = '1.6.0.4'
+  LCLVersion = '2.0.2.0'
   object ToolBarMain: TToolBar
     Left = 0
     Height = 46
@@ -18,6 +18,7 @@ object FormTemplate: TFormTemplate
     Width = 821
     AutoSize = True
     ButtonHeight = 44
+    ButtonWidth = 23
     Caption = 'ToolBarMain'
     Images = ImageListToolbar
     ShowCaptions = True
@@ -28,38 +29,37 @@ object FormTemplate: TFormTemplate
       Action = ActionComPortConnect
     end
     object ToolButtonEthernetClient: TToolButton
-      Left = 63
+      Left = 50
       Top = 2
       Action = ActionEthenetClientConnect
     end
     object ToolButtonEthernetServer: TToolButton
-      Left = 165
+      Left = 130
       Top = 2
       Action = ActionEthernetServerConnect
     end
     object ToolButtonSeparator: TToolButton
-      Left = 269
+      Left = 215
       Height = 44
       Top = 2
-      Width = 10
       Caption = 'ToolButtonSpace'
       Style = tbsSeparator
     end
     object ToolButtonMsgTrace: TToolButton
-      Left = 351
+      Left = 278
       Top = 2
       Action = ActionMsgTrace
     end
     object ToolButtonLccLogIn: TToolButton
-      Left = 279
+      Left = 223
       Top = 2
       Action = ActionLccLogin
     end
   end
   object StatusBarMain: TStatusBar
     Left = 0
-    Height = 15
-    Top = 563
+    Height = 23
+    Top = 535
     Width = 821
     Panels = <    
       item
@@ -74,25 +74,25 @@ object FormTemplate: TFormTemplate
   end
   object PanelAppSpace: TPanel
     Left = 0
-    Height = 374
+    Height = 346
     Top = 46
     Width = 821
     Align = alClient
-    ClientHeight = 374
+    ClientHeight = 346
     ClientWidth = 821
     TabOrder = 2
     object PanelOutgoing: TPanel
       Left = 1
-      Height = 372
+      Height = 344
       Top = 1
       Width = 350
       Align = alLeft
-      ClientHeight = 372
+      ClientHeight = 344
       ClientWidth = 350
       TabOrder = 0
       object MemoOutgoing: TMemo
         Left = 1
-        Height = 320
+        Height = 292
         Top = 1
         Width = 348
         Align = alClient
@@ -102,7 +102,7 @@ object FormTemplate: TFormTemplate
       object Panel1: TPanel
         Left = 1
         Height = 50
-        Top = 321
+        Top = 293
         Width = 348
         Align = alBottom
         ClientHeight = 50
@@ -142,16 +142,16 @@ object FormTemplate: TFormTemplate
     end
     object PanelIncoming: TPanel
       Left = 473
-      Height = 372
+      Height = 344
       Top = 1
       Width = 347
       Align = alClient
-      ClientHeight = 372
+      ClientHeight = 344
       ClientWidth = 347
       TabOrder = 1
       object MemoIncoming: TMemo
         Left = 1
-        Height = 308
+        Height = 280
         Top = 1
         Width = 345
         Align = alClient
@@ -161,7 +161,7 @@ object FormTemplate: TFormTemplate
       object Panel2: TPanel
         Left = 1
         Height = 62
-        Top = 309
+        Top = 281
         Width = 345
         Align = alBottom
         ClientHeight = 62
@@ -188,10 +188,10 @@ object FormTemplate: TFormTemplate
           TabOrder = 1
         end
         object CheckBoxLockUpdate: TCheckBox
-          Left = 219
-          Height = 18
+          Left = 243
+          Height = 17
           Top = 8
-          Width = 115
+          Width = 91
           Anchors = [akTop, akRight]
           Caption = 'Lock UI Update'
           OnChange = CheckBoxLockUpdateChange
@@ -211,17 +211,17 @@ object FormTemplate: TFormTemplate
     end
     object PanelCenter: TPanel
       Left = 351
-      Height = 372
+      Height = 344
       Top = 1
       Width = 122
       Align = alLeft
-      ClientHeight = 372
+      ClientHeight = 344
       ClientWidth = 122
       TabOrder = 2
       object ButtonSend: TButton
         Left = 8
         Height = 22
-        Top = 340
+        Top = 312
         Width = 104
         Anchors = [akLeft, akBottom]
         Caption = 'Send ->'
@@ -230,8 +230,8 @@ object FormTemplate: TFormTemplate
       end
       object SpinEditDelay: TSpinEdit
         Left = 16
-        Height = 16
-        Top = 299
+        Height = 21
+        Top = 266
         Width = 74
         Alignment = taRightJustify
         Anchors = [akLeft, akBottom]
@@ -241,9 +241,9 @@ object FormTemplate: TFormTemplate
       end
       object Label1: TLabel
         Left = 8
-        Height = 16
-        Top = 260
-        Width = 96
+        Height = 13
+        Top = 235
+        Width = 73
         Anchors = [akLeft, akBottom]
         Caption = 'Msg Delay (ms)'
         ParentColor = False
@@ -259,7 +259,7 @@ object FormTemplate: TFormTemplate
       end
       object SpinEditRepeat: TSpinEdit
         Left = 16
-        Height = 16
+        Height = 21
         Top = 66
         Width = 74
         Alignment = taRightJustify
@@ -269,9 +269,9 @@ object FormTemplate: TFormTemplate
       end
       object Label2: TLabel
         Left = 8
-        Height = 16
+        Height = 13
         Top = 40
-        Width = 85
+        Width = 67
         Caption = 'Repeat Count'
         ParentColor = False
       end
@@ -281,7 +281,7 @@ object FormTemplate: TFormTemplate
     Cursor = crVSplit
     Left = 0
     Height = 5
-    Top = 420
+    Top = 392
     Width = 821
     Align = alBottom
     ResizeAnchor = akBottom
@@ -289,7 +289,7 @@ object FormTemplate: TFormTemplate
   object PanelAddOns: TPanel
     Left = 0
     Height = 138
-    Top = 425
+    Top = 397
     Width = 821
     Align = alBottom
     ClientHeight = 138
@@ -297,7 +297,7 @@ object FormTemplate: TFormTemplate
     TabOrder = 4
     object LabelServerConnections: TLabel
       Left = 9
-      Height = 16
+      Height = 13
       Top = 1
       Width = 803
       Align = alTop
@@ -308,8 +308,8 @@ object FormTemplate: TFormTemplate
     end
     object ListViewServerConnections: TListView
       Left = 1
-      Height = 120
-      Top = 17
+      Height = 123
+      Top = 14
       Width = 819
       Align = alClient
       Columns = <      
@@ -32408,17 +32408,6 @@ object FormTemplate: TFormTemplate
     left = 280
     top = 144
   end
-  object LccEthernetClient: TLccEthernetClient
-    Hub = False
-    Gridconnect = True
-    LccSettings = LccSettings
-    OnConnectionStateChange = LccEthernetClientConnectionStateChange
-    OnErrorMessage = LccEthernetClientErrorMessage
-    OnReceiveMessage = LccEthernetClientReceiveMessage
-    SleepCount = 0
-    left = 280
-    top = 200
-  end
   object LccEthernetServer: TLccEthernetServer
     Hub = False
     Gridconnect = True
@@ -32484,5 +32473,15 @@ object FormTemplate: TFormTemplate
     Filter = 'Message File|*.txt'
     left = 200
     top = 137
+  end
+  object LccEthernetClient: TLccEthernetClient
+    Gridconnect = False
+    LccSettings = LccSettings
+    OnConnectionStateChange = LccEthernetClientConnectionStateChange
+    OnErrorMessage = LccEthernetClientErrorMessage
+    OnReceiveMessage = LccEthernetClientReceiveMessage
+    SleepCount = 0
+    left = 272
+    top = 208
   end
 end
