--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/unit1.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/unit1.lfm
@@ -1,44 +1,44 @@
 object Form1: TForm1
-  Left = 547
-  Height = 338
+  Left = 438
+  Height = 388
   Top = 119
-  Width = 655
+  Width = 555
   Caption = 'Form1'
-  ClientHeight = 338
-  ClientWidth = 655
+  ClientHeight = 388
+  ClientWidth = 555
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
   LCLVersion = '2.0.6.0'
-  object CheckBox1: TCheckBox
-    Left = 56
-    Height = 18
-    Top = 15
-    Width = 90
-    Caption = 'CheckBox1'
-    TabOrder = 0
-  end
   object Button1: TButton
-    Left = 73
+    Left = 160
     Height = 22
-    Top = 101
-    Width = 167
-    Caption = 'Connect'
+    Top = 108
+    Width = 200
+    Caption = 'Button1'
     OnClick = Button1Click
-    TabOrder = 1
+    TabOrder = 0
   end
   object StatusBar1: TStatusBar
     Left = 0
     Height = 15
-    Top = 323
-    Width = 655
+    Top = 373
+    Width = 555
     Panels = <    
       item
-        Text = 'Disconnected'
-        Width = 300
+        Width = 250
       end    
       item
-        Width = 300
+        Width = 250
       end>
     SimplePanel = False
+  end
+  object Button2: TButton
+    Left = 161
+    Height = 22
+    Top = 159
+    Width = 203
+    Caption = 'Button2'
+    OnClick = Button2Click
+    TabOrder = 2
   end
 end
