Refactored LccLib passes Python with the Assember_Disassembler file removed from the code base.  Each node does this in its ProcessMessage loop

--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/unit1.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/unit1.lfm
@@ -564,6 +564,7 @@ object Form1: TForm1
     Top = 40
     Width = 131
     Caption = 'Datagram Count'
+    OnClick = ButtonDatagramCountClick
     TabOrder = 6
   end
   object LabelAllcoatedDatagrams: TLabel
@@ -572,7 +573,7 @@ object Form1: TForm1
     Top = 46
     Width = 176
     AutoSize = False
-    Caption = 'Allocated Datagram = 0'
+    Caption = 'Allocated Buffers: 0'
     ParentColor = False
   end
 end
