--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/unit1.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/unit1.lfm
@@ -14,7 +14,7 @@ object Form1: TForm1
     Height = 22
     Top = 8
     Width = 200
-    Caption = 'Button1'
+    Caption = 'Connect'
     OnClick = Button1Click
     TabOrder = 0
   end
@@ -32,13 +32,13 @@ object Form1: TForm1
       end>
     SimplePanel = False
   end
-  object Button2: TButton
+  object ButtonLogin: TButton
     Left = 248
     Height = 22
     Top = 8
     Width = 203
     Caption = 'Log In'
-    OnClick = Button2Click
+    OnClick = ButtonLoginClick
     TabOrder = 2
   end
   inline SynEdit1: TSynEdit
@@ -574,6 +574,54 @@ object Form1: TForm1
     Width = 176
     AutoSize = False
     Caption = 'Allocated Buffers: 0'
+    ParentColor = False
+  end
+  object Label1: TLabel
+    Left = 352
+    Height = 16
+    Top = 46
+    Width = 46
+    Caption = 'NodeID'
+    ParentColor = False
+  end
+  object LabelNodeID: TLabel
+    Left = 416
+    Height = 16
+    Top = 46
+    Width = 33
+    Caption = 'None'
+    ParentColor = False
+  end
+  object Label3: TLabel
+    Left = 600
+    Height = 16
+    Top = 46
+    Width = 48
+    Caption = 'Alias ID'
+    ParentColor = False
+  end
+  object LabelAliasID: TLabel
+    Left = 661
+    Height = 16
+    Top = 46
+    Width = 33
+    Caption = 'None'
+    ParentColor = False
+  end
+  object Label2: TLabel
+    Left = 552
+    Height = 16
+    Top = 14
+    Width = 75
+    Caption = 'Node Count'
+    ParentColor = False
+  end
+  object LabelNodeCount: TLabel
+    Left = 640
+    Height = 16
+    Top = 14
+    Width = 8
+    Caption = '0'
     ParentColor = False
   end
 end
