--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/TestLcc/unit1.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/TestLcc/unit1.lfm
@@ -20,8 +20,8 @@ object Form1: TForm1
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 15
-    Top = 428
+    Height = 23
+    Top = 420
     Width = 793
     Panels = <    
       item
@@ -43,8 +43,8 @@ object Form1: TForm1
   end
   inline SynEdit1: TSynEdit
     Left = 0
-    Height = 356
-    Top = 72
+    Height = 324
+    Top = 96
     Width = 793
     Align = alBottom
     Anchors = [akTop, akLeft, akRight, akBottom]
@@ -55,7 +55,7 @@ object Form1: TForm1
     ParentColor = False
     ParentFont = False
     TabOrder = 3
-    Gutter.Width = 55
+    Gutter.Width = 51
     Gutter.MouseActions = <>
     RightGutter.Width = 0
     RightGutter.MouseActions = <>
@@ -511,7 +511,7 @@ object Form1: TForm1
         MouseActions = <>
       end
       object SynGutterLineNumber1: TSynGutterLineNumber
-        Width = 15
+        Width = 11
         MouseActions = <>
         MarkupInfo.Background = clBtnFace
         MarkupInfo.Foreground = clNone
@@ -541,26 +541,27 @@ object Form1: TForm1
       end
     end
   end
-  object Button3: TButton
+  object ButtonClear: TButton
     Left = 696
     Height = 22
     Top = 8
     Width = 75
     Caption = 'Clear'
+    OnClick = ButtonClearClick
     TabOrder = 4
   end
   object CheckBoxLogging: TCheckBox
     Left = 464
-    Height = 18
+    Height = 19
     Top = 12
-    Width = 69
+    Width = 64
     Caption = 'Logging'
     TabOrder = 5
   end
   object ButtonDatagramCount: TButton
     Left = 13
     Height = 22
-    Top = 40
+    Top = 64
     Width = 131
     Caption = 'Datagram Count'
     OnClick = ButtonDatagramCountClick
@@ -569,7 +570,7 @@ object Form1: TForm1
   object LabelAllcoatedDatagrams: TLabel
     Left = 160
     Height = 16
-    Top = 46
+    Top = 70
     Width = 176
     AutoSize = False
     Caption = 'Allocated Buffers: 0'
@@ -577,50 +578,91 @@ object Form1: TForm1
   end
   object Label1: TLabel
     Left = 352
-    Height = 16
-    Top = 46
-    Width = 46
+    Height = 15
+    Top = 70
+    Width = 40
     Caption = 'NodeID'
     ParentColor = False
   end
   object LabelNodeID: TLabel
     Left = 416
-    Height = 16
-    Top = 46
-    Width = 33
+    Height = 15
+    Top = 70
+    Width = 29
     Caption = 'None'
     ParentColor = False
   end
   object Label3: TLabel
     Left = 600
-    Height = 16
-    Top = 46
-    Width = 48
+    Height = 15
+    Top = 70
+    Width = 39
     Caption = 'Alias ID'
     ParentColor = False
   end
   object LabelAliasID: TLabel
     Left = 661
-    Height = 16
-    Top = 46
-    Width = 33
+    Height = 15
+    Top = 70
+    Width = 29
     Caption = 'None'
     ParentColor = False
   end
   object Label2: TLabel
     Left = 552
-    Height = 16
+    Height = 15
     Top = 14
-    Width = 75
+    Width = 65
     Caption = 'Node Count'
     ParentColor = False
   end
   object LabelNodeCount: TLabel
     Left = 640
-    Height = 16
+    Height = 15
     Top = 14
-    Width = 8
+    Width = 6
     Caption = '0'
+    ParentColor = False
+  end
+  object CheckBoxLocalIP: TCheckBox
+    Left = 28
+    Height = 19
+    Top = 35
+    Width = 106
+    Caption = 'Local IP Address'
+    TabOrder = 7
+  end
+  object Edit1: TEdit
+    Left = 159
+    Height = 23
+    Top = 36
+    Width = 80
+    TabOrder = 8
+    Text = '100'
+  end
+  object Button1: TButton
+    Left = 248
+    Height = 22
+    Top = 37
+    Width = 75
+    Caption = 'Button1'
+    OnClick = Button1Click
+    TabOrder = 9
+  end
+  object Label4: TLabel
+    Left = 349
+    Height = 15
+    Top = 40
+    Width = 34
+    Caption = 'Label4'
+    ParentColor = False
+  end
+  object Label5: TLabel
+    Left = 432
+    Height = 15
+    Top = 40
+    Width = 34
+    Caption = 'Label5'
     ParentColor = False
   end
 end
